perf: convert the png file to webp file for performance

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo1.jpg" />
+  <link rel="icon" type="image/svg+xml" href="/logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BuffyDrop</title>
+  <link rel="preload" href="./dogAvatar.webp" as="image">
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Lilita+One:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
