style: change the avatar style

--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/logo.webp" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>BuffyDrop</title>
-  <link rel="preload" href="/public/dogAvatar.webp" as="image">
-  <link rel="preload" href="/public/dogAvatar-small.webp" as="image">
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <!-- <script src="https://telegram.org/js/telegram-web-app.js" defer></script> -->
 </head>
 
 <body>
